...

  const keyExtractor = (item: any, index: number) => index.toString()

  const renderItem = ({ item }: { item: VisitModel }) => (
    <TouchableOpacity
      style={{}}
      testID="visitItem"
      onPress={() =>
        props.navigation.navigate("EventList", {
          patient,
          visitId: item.id,
          visitCheckInTimestamp: item.checkInTimestamp?.getTime()
        })
...
